styles/timer.css
div.timeEntry {
    margin-bottom: 0.1em;
    border-bottom-width: 0.05em;
    border-bottom-style: solid;
}

div#timerDiv {
    width: 70%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: 800;
    touch-action: manipulation;
    user-select: none;
}

div#stats {
    width: 30%;
}

div#times {
    overflow: scroll;
}

div#timer_and_stats {
    height: 60%;
}

div.practice_layout {
    width: 100%;
    height: 100%;
}

div#mainTable {
    height: 100%;
}

div#casesBox {
    justify-content: space-between;
    padding: 0.3em;
}

input {
    border-style: solid;
    border-radius: 0.2em;
}

span.timeResult {
    cursor: pointer;
}

span.timeResultBold {
    cursor: pointer;
    color: var(--primary);
}

div#scramble span {
    cursor: pointer;
}

div#scramble span:hover {
    color: var(--primary);
}

div#last_scramble {
    align-items: center;
    gap: 0.3em;
    justify-content: space-between;
}

.caseNameStats:hover {
    color: var(--primary);
}

img#boxImg {
    width: 100%;
    max-width: 7em;
    margin: 0.4em;
}

